# $Id$ vim: ts=4

Griffith ChangeLog
------------------
(c) 2005-2011  Vasco Nunes, Piotr Ożarowski

2012-01-07  Ivo Nunes
    * Added a plugin for the portuguese website www.dvdpt.com

2012-01-02  Michael Jahn
	* [#909513] code errors in import plugins

2011-12-27  Michael Jahn
	* better error handling for PDF export plugin

2011-12-26  Piotr Ożarowski
	* Restoring database from backup fixed

---- 0.13 ----

2011-12-18  Piotr Ożarowski
	* Filmweb movie plugin updated (thanks to mariusz2806)

2011-12-02  Michael Jahn
	* [#888347] FilmAffinity plugin doesn't work
	* [#897774] removal of the first added subtitle format is not possible

2011-12-01  Michael Jahn
	* [#885914] Amazon Plugin in Griffith doesn't work

2011-09-14  Michael Jahn
	* [#815421] add ipython 0.11 compatibilty (thanks to Julian Taylor)

2011-09-12  Michael Jahn
	* added limited urllib2 support

2011-09-04  Piotr Ożarowski
	* AniDB movie plugin rewritten (uses HTTP XML API now) - needs lxml module

2011-09-01  Michael Jahn
	* updated Allocine plugin, switch to JSON api
	* added database maintenance extension

2011-08-30  Michael Jahn
	* updated plugins: AllRovi, Cinemovies, Cineteka, CSFD, IMDb, Zelluloid

2011-08-23  Michael Jahn
	* added buttons to remove and add a poster within the movie edit dialog
	* fixed bug in extension "remover", it doesn't work if a criteria is required
	  (f.e. adv filter with "required tag" did only remove the tags not the movie entries)
	* extension remover now respects the simple filter condition

2011-08-20  Michael Jahn
	* updated KinoDe plugin
	* new icons for loading and removing posters (toolbar and menu are now the same icons)

2011-08-10  Michael Jahn
	* added new icons for the extensions (thanks to CinéphOli)

2011-07-18  Michael Jahn
	* configurable default value for field "seen it"
	* ability to switch the behaviour of the live search that it queries only after
	  enter is pressed (switchable via griffith.cfg only); good for bigger databases