@@ -32,3 +32,6 @@ dragonskulle <dragonskulle@gmail.com>:
 
 Ivo Nunes <netherblood@gmail.com>
 * Programmer
+
+Elan Ruusamäe <glen@delfi.ee>
+* Telico import plugin
