@@ -4,8 +4,12 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
+
+2012-01-08  Piotr Ożarowski
+	* Telico import plugin added (thanks to Elan Ruusamäe)
+
 2012-01-07  Ivo Nunes
-    * Added a plugin for the portuguese website www.dvdpt.com
+	* Added a plugin for the portuguese website www.dvdpt.com
 
 2012-01-02  Michael Jahn
 	* [#909513] code errors in import plugins
